--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1106,6 +1106,15 @@ Plugin.prototype = {
   },
 
 
+  // get the extension from the current number
+  getExtension: function() {
+    if (window.intlTelInputUtils) {
+      return intlTelInputUtils.getExtension(this._getFullNumber(), this.selectedCountryData.iso2);
+    }
+    return "";
+  },
+
+
   // format the number to the given format
   getNumber: function(format) {
     if (window.intlTelInputUtils) {
