--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -12,6 +12,8 @@ var pluginName = "intlTelInput",
     dropdownContainer: "",
     // don't display these countries
     excludeCountries: [],
+    // format the input value during initialisation
+    formatOnInit: true,
     // geoIp lookup function
     geoIpLookup: null,
     // initial country
@@ -356,7 +358,7 @@ Plugin.prototype = {
     // format
     if (val) {
       // this wont be run after _updateDialCode as that's only called if no val
-      this._updateValFromNumber(val);
+      this._updateValFromNumber(val, this.options.formatOnInit);
     }
   },
 
@@ -755,8 +757,8 @@ Plugin.prototype = {
 
   // update the input's value to the given val (format first if possible)
   // NOTE: this is called from _setInitialState, handleUtils and setNumber
-  _updateValFromNumber: function(number, format) {
-    if (window.intlTelInputUtils && this.selectedCountryData) {
+  _updateValFromNumber: function(number, doFormat, format) {
+    if (doFormat && window.intlTelInputUtils && this.selectedCountryData) {
       if (!$.isNumeric(format)) {
         format = (this.options.nationalMode || number.charAt(0) != "+") ? intlTelInputUtils.numberFormat.NATIONAL : intlTelInputUtils.numberFormat.INTERNATIONAL;
       }
@@ -1173,7 +1175,7 @@ Plugin.prototype = {
   setNumber: function(number, format) {
     // we must update the flag first, which updates this.selectedCountryData, which is used for formatting the number before displaying it
     this._updateFlagFromNumber(number);
-    this._updateValFromNumber(number, format);
+    this._updateValFromNumber(number, $.isNumeric(format), format);
   },
 
 
@@ -1183,7 +1185,7 @@ Plugin.prototype = {
     if (window.intlTelInputUtils) {
       // if there's an initial value in the input, then format it
       if (this.telInput.val()) {
-        this._updateValFromNumber(this.telInput.val());
+        this._updateValFromNumber(this.telInput.val(), this.options.formatOnInit);
       }
       this._updatePlaceholder();
     }
