--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -48,12 +48,12 @@ var pluginName = "intlTelInput",
     CTRL: 17,
     CMD1: 91, // Chrome
     CMD2: 224 // FF
-  },
-  windowLoaded = false;
+  };
 
 // keep track of if the window.load event has fired as impossible to check after the fact
 $(window).load(function() {
-  windowLoaded = true;
+  // UPDATE: use a public static field so we can fudge it in the tests
+  $.fn[pluginName].windowLoaded = true;
 });
 
 function Plugin(element, options) {
@@ -437,7 +437,7 @@ Plugin.prototype = {
     // if the user has specified the path to the utils script, fetch it on window.load, else resolve
     if (this.options.utilsScript) {
       // if the plugin is being initialised after the window.load event has already been fired
-      if (windowLoaded) {
+      if ($.fn[pluginName].windowLoaded) {
         $.fn[pluginName].loadUtils(this.options.utilsScript, this.utilsScriptDeferred);
       } else {
         // wait until the load event so we don't block any other requests e.g. the flags image
