--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -8,6 +8,8 @@ var pluginName = "intlTelInput",
     autoHideDialCode: true,
     // add or remove input placeholder with an example number for the selected country
     autoPlaceholder: true,
+    // modify the auto placeholder
+    customPlaceholder: null,
     // append menu to a specific element
     dropdownContainer: "",
     // don't display these countries
