--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -872,7 +872,7 @@ Plugin.prototype = {
 
     // on change flag, trigger a custom event
     if (!isInit && prevCountry.iso2 !== countryCode) {
-      this.telInput.trigger("countrychange");
+      this.telInput.trigger("countrychange", this.selectedCountryData);
     }
   },
 
