--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -548,26 +548,35 @@ Plugin.prototype = {
       }
     });
 
-    // on blur: if just a dial code then remove it
-    this.telInput.on("blur" + this.ns, function() {
-      var value = that.telInput.val(),
-        startsPlus = (value.charAt(0) == "+");
-
-      if (startsPlus) {
-        var numeric = that._getNumeric(value);
-        // if just a plus, or if just a dial code
-        if (!numeric || that.selectedCountryData.dialCode == numeric) {
-          that.telInput.val("");
-        }
-      }
-
-      // remove the keypress listener we added on focus
-      that.telInput.off("keypress.plus" + that.ns);
+    // on blur or form submit: if just a dial code then remove it
+    var form = this.telInput.prop('form');
+    if (form) {
+      $(form).on("submit", function () {
+        that._removeEmptyDialCode();
+      });
+    }
+    this.telInput.on("blur" + this.ns, function () {
+      that._removeEmptyDialCode();
     });
 
     // made the decision not to trigger blur() now, because would only do anything in the case where they manually set the initial value to just a dial code, in which case they probably want it to be displayed.
   },
 
+  _removeEmptyDialCode: function () {
+      var value = this.telInput.val(),
+        startsPlus = (value.charAt(0) == "+");
+
+      if (startsPlus) {
+        var numeric = this._getNumeric(value);
+        // if just a plus, or if just a dial code
+        if (!numeric || this.selectedCountryData.dialCode == numeric) {
+          this.telInput.val("");
+        }
+      }
+
+      // remove the keypress listener we added on focus
+      this.telInput.off("keypress.plus" + this.ns);
+  },
 
   // extract the numeric digits from the given string
   _getNumeric: function(s) {
