Namespace form submit event

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -551,7 +551,7 @@ Plugin.prototype = {
     // on blur or form submit: if just a dial code then remove it
     var form = this.telInput.prop('form');
     if (form) {
-      $(form).on("submit", function () {
+      $(form).on("submit" + this.ns, function () {
         that._removeEmptyDialCode();
       });
     }
