Cleanup form submit event handler on destroy

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1103,6 +1103,14 @@ Plugin.prototype = {
       this.telInput.closest("label").off(this.ns);
     }
 
+    // unbind submit event handler on form
+    if (this.options.autoHideDialCode) {
+      var form = this.telInput.prop('form');
+      if (form) {
+        $(form).off(this.ns);
+      }
+    }
+
     // unbind all events: key events, and focus/blur events if autoHideDialCode=true
     this.telInput.off(this.ns);
 
