--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1165,7 +1165,7 @@ Plugin.prototype = {
 
   // validate the input val - assumes the global function isValidNumber (from utilsScript)
   isValidNumber: function() {
-    var val = $.trim(this._getFullNumber()),
+    var val = this._getFullNumber().trim(),
       countryCode = (this.options.nationalMode) ? this.selectedCountryData.iso2 : "";
     return (window.intlTelInputUtils ? intlTelInputUtils.isValidNumber(val, countryCode) : null);
   },
