--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -485,7 +485,7 @@ Plugin.prototype = {
     });
 
     // update flag on cut/paste events (now supported in all major browsers)
-    this.telInput.on("cut" + this.ns + " paste" + this.ns + " keyup" + this.ns, function() {
+    this.telInput.on("cut" + this.ns + " paste" + this.ns, function() {
       // hack because "paste" event is fired before input is updated
       setTimeout(function() {
         that._updateFlagFromNumber(that.telInput.val());
@@ -900,7 +900,7 @@ Plugin.prototype = {
 
     // focus the input
     this.telInput.focus();
-    // fix for FF and IE11 (with nationalMode=false i.e. auto inserting dial code), who try to put the cursor at the beginning the first time
+    // put cursor at end - this fix is required for FF and IE11 (with nationalMode=false i.e. auto inserting dial code), who try to put the cursor at the beginning the first time
     if (this.isGoodBrowser) {
       var len = this.telInput.val().length;
       this.telInput[0].setSelectionRange(len, len);
