Added initialCountry="blank" and flagOnEmptyDialCode options

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -14,6 +14,8 @@ var pluginName = "intlTelInput",
     dropdownContainer: "",
     // don't display these countries
     excludeCountries: [],
+    // show a flag when a valid dial code has not been entered
+    flagOnEmptyDialCode: true,
     // format the input value during initialisation
     formatOnInit: true,
     // geoIp lookup function
@@ -324,7 +326,7 @@ Plugin.prototype = {
     // if we already have a dial code we can go ahead and set the flag, else fall back to default
     if (this._getDialCode(val)) {
       this._updateFlagFromNumber(val, true);
-    } else if (this.options.initialCountry !== "auto") {
+    } else if (this.options.initialCountry !== "auto" && this.options.initialCountry !== "blank") {
       // see if we should select a flag
       if (this.options.initialCountry) {
         this._setFlag(this.options.initialCountry, true);
@@ -516,7 +518,7 @@ Plugin.prototype = {
 
     // on focus: if empty, insert the dial code for the currently selected flag
     this.telInput.on("focus" + this.ns, function(e) {
-      if (!that.telInput.val() && !that.telInput.prop("readonly") && that.selectedCountryData.dialCode) {
+      if (!that.telInput.val() && !that.telInput.prop("readonly") && that.selectedCountryData && that.selectedCountryData.dialCode) {
         // insert the dial code
         that.telInput.val("+" + that.selectedCountryData.dialCode);
         // after auto-inserting a dial code, if the first key they hit is '+' then assume they are entering a new number, so remove the dial code. use keypress instead of keydown because keydown gets triggered for the shift key (required to hit the + key), and instead of keyup because that shows the new '+' before removing the old one
@@ -789,7 +791,7 @@ Plugin.prototype = {
       countryCode = "";
     } else if (!number || number == "+") {
       // empty, or just a plus, so default
-      countryCode = this.defaultCountry;
+      countryCode = this.options.flagOnEmptyDialCode ? this.defaultCountry : "";
     }
 
     if (countryCode !== null) {
