--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -12,14 +12,12 @@
 
     <!-- GOOGLE ANALYTICS -->
     <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-26178728-1']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-26178728-1', 'auto');
+      ga('send', 'pageview');
     </script>
     <!-- /GOOGLE ANALYTICS -->
   </head>
@@ -28,7 +26,7 @@
     <a href="/intl-tel-input.html">Back</a>
     <h1>Example: <%= title %></h1>
     <p><%= desc %></p>
-    
+
     <h2>Markup</h2>
     <pre><code class="language-markup"><%= markup %></code></pre>
 
