--- a/src/js/wrapper.js.ejs
+++ b/src/js/wrapper.js.ejs
@@ -12,7 +12,7 @@
 }(function ($, window, document, undefined) {
   "use strict";
 
-  <%- plugin %>
-  <%- data %>
+  <%= plugin %>
+  <%= data %>
 
 }));
