--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -6,7 +6,7 @@ var pluginName = "intlTelInput",
     allowDropdown: true,
     // if there is just a dial code in the input: remove it on blur, and re-add it on focus
     autoHideDialCode: true,
-    // add or remove input placeholder with an example number for the selected country
+    // add a placeholder in the input with an example number for the selected country
     autoPlaceholder: "polite",
     // modify the auto placeholder
     customPlaceholder: null,
@@ -875,7 +875,7 @@ Plugin.prototype = {
 
   // update the input placeholder to an example number from the currently selected country
   _updatePlaceholder: function() {
-    var shouldSetPlaceholder = this.options.autoPlaceholder === "aggressive" || (!this.hadInitialPlaceholder && (this.options.autoPlaceholder === true || this.options.autoPlaceholder === "polite"));
+    var shouldSetPlaceholder = (this.options.autoPlaceholder === "aggressive") || (!this.hadInitialPlaceholder && (this.options.autoPlaceholder === true || this.options.autoPlaceholder === "polite"));
     if (window.intlTelInputUtils && shouldSetPlaceholder && this.selectedCountryData) {
       var numberType = intlTelInputUtils.numberType[this.options.numberType],
         placeholder = (this.selectedCountryData.iso2) ? intlTelInputUtils.getExampleNumber(this.selectedCountryData.iso2, this.options.nationalMode, numberType) : "";
