add test for changing global defaults; remove options and defaults keys replace

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -54,7 +54,7 @@ $(window).on("load", function() {
 function Plugin(element, options) {
   this.telInput = $(element);
 
-  this.options = $.extend({}, $.fn[pluginName].defaults, options);
+  this.options = $.extend({}, defaults, options);
 
   // event namespace
   this.ns = "." + pluginName + (id++);
