--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <a href="/intl-tel-input.html">Back</a>
+    <a href="/">Back</a>
     <h1>Example: <%= title %></h1>
     <p><%= desc %></p>
 
