--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -52,9 +52,22 @@ $(window).on("load", function() {
 });
 
 function Plugin(element, options) {
+
+  // http://youmightnotneedjquery.com/#extend
+  this._extend = function(out) {
+    out = out || {};
+    for (var i = 1; i < arguments.length; i++) {
+      if (!arguments[i]) continue;
+        for (var key in arguments[i]) {
+          if (arguments[i].hasOwnProperty(key)) out[key] = arguments[i][key];
+      }
+    }
+    return out;
+  };
+
   this.telInput = $(element);
 
-  this.options = $.extend({}, defaults, options);
+  this.options = this._extend({}, defaults, options);
 
   // event namespace
   this.ns = "." + pluginName + (id++);
@@ -1010,7 +1023,7 @@ Plugin.prototype = {
       for (var i = 0; i < number.length; i++) {
         var c = number.charAt(i);
         // if char is number
-        if ($.isNumeric(c)) {
+        if (this._isNumeric(c)) {
           numericChars += c;
           // if current numericChars make a valid dial code
           if (this.countryCodes[numericChars]) {
@@ -1027,6 +1040,21 @@ Plugin.prototype = {
     return dialCode;
   },
 
+  // See: jQuery, isNumeric
+  // https://github.com/jquery/jquery/blob/2d4f53416e5f74fa98e0c1d66b6f3c285a12f0ce/src/core.js#L224
+  _isNumeric: function(obj) {
+      // See: jQuery, type
+      // https://github.com/jquery/jquery/blob/2d4f53416e5f74fa98e0c1d66b6f3c285a12f0ce/src/core.js#L271
+      var _typeFunc = function(obj) {
+          if (obj === null) {
+              return obj + "";
+          }
+          // Support: Android <=2.3 only (functionish RegExp)
+          return typeof obj === "object" || typeof obj === "function" ? class2type[toString.call(obj)] || "object" : typeof obj;
+      };
+      var type = _typeFunc(obj);
+      return (type === "number" || type === "string") && !isNaN(obj - parseFloat(obj));
+  },
 
   // get the input val, adding the dial code if separateDialCode is enabled
   _getFullNumber: function() {
