Make utils.js available by pre-compilation

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -420,8 +420,13 @@ Plugin.prototype = {
   _initRequests: function() {
     var that = this;
 
+    if (window.intlTelInputUtils) {
+      // tell all instances that the utils request is complete
+      $(".intl-tel-input input").intlTelInput("handleUtils");
+
     // if the user has specified the path to the utils script, fetch it on window.load, else resolve
-    if (this.options.utilsScript) {
+    } else if (this.options.utilsScript) {
+
       // if the plugin is being initialised after the window.load event has already been fired
       if ($.fn[pluginName].windowLoaded) {
         $.fn[pluginName].loadUtils(this.options.utilsScript, this.utilsScriptDeferred);
@@ -431,6 +436,7 @@ Plugin.prototype = {
           $.fn[pluginName].loadUtils(that.options.utilsScript, that.utilsScriptDeferred);
         });
       }
+      
     } else {
       this.utilsScriptDeferred.resolve();
     }
