fix issue: libphonenumber methods expect NANP numbers to include area code

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1030,8 +1030,18 @@ Plugin.prototype = {
 
   // get the input val, adding the dial code if separateDialCode is enabled
   _getFullNumber: function() {
-    var prefix = (this.options.separateDialCode) ? "+" + this.selectedCountryData.dialCode : "";
-    return prefix + this.telInput.val();
+    var val = this.telInput.val(),
+      dialCode = this.selectedCountryData.dialCode,
+      prefix;
+    if (this.options.separateDialCode) {
+      prefix = "+" + dialCode;
+    } else if (dialCode && dialCode.charAt(0) == "1" && dialCode.length == 4 && dialCode.substr(1) != val.substr(0, 3)) {
+      // if we're dealing with a NANP country, ensure the number includes the area code
+      prefix = dialCode.substr(1);
+    } else {
+      prefix = "";
+    }
+    return prefix + val;
   },
 
 
