--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -14,8 +14,8 @@ var pluginName = "intlTelInput",
     dropdownContainer: "",
     // don't display these countries
     excludeCountries: [],
-    // format the input value during initialisation
-    formatOnInit: true,
+    // format the input value during initialisation and on setNumber
+    formatOnDisplay: true,
     // geoIp lookup function
     geoIpLookup: null,
     // initial country
@@ -345,7 +345,7 @@ Plugin.prototype = {
     // format
     if (val) {
       // this wont be run after _updateDialCode as that's only called if no val
-      this._updateValFromNumber(val, this.options.formatOnInit);
+      this._updateValFromNumber(val);
     }
   },
 
@@ -742,8 +742,8 @@ Plugin.prototype = {
 
   // update the input's value to the given val (format first if possible)
   // NOTE: this is called from _setInitialState, handleUtils and setNumber
-  _updateValFromNumber: function(number, doFormat) {
-    if (doFormat && window.intlTelInputUtils && this.selectedCountryData) {
+  _updateValFromNumber: function(number) {
+    if (this.options.formatOnDisplay && window.intlTelInputUtils && this.selectedCountryData) {
       var format = (!this.options.separateDialCode && (this.options.nationalMode || number.charAt(0) != "+")) ? intlTelInputUtils.numberFormat.NATIONAL : intlTelInputUtils.numberFormat.INTERNATIONAL;
       number = intlTelInputUtils.formatNumber(number, this.selectedCountryData.iso2, format);
     }
@@ -1186,11 +1186,10 @@ Plugin.prototype = {
 
 
   // set the input value and update the flag
-  // NOTE: preventFormat arg is for public method
-  setNumber: function(number, preventFormat) {
+  setNumber: function(number) {
     // we must update the flag first, which updates this.selectedCountryData, which is used for formatting the number before displaying it
     this._updateFlagFromNumber(number);
-    this._updateValFromNumber(number, !preventFormat);
+    this._updateValFromNumber(number);
   },
 
 
@@ -1200,7 +1199,7 @@ Plugin.prototype = {
     if (window.intlTelInputUtils) {
       // if there's an initial value in the input, then format it
       if (this.telInput.val()) {
-        this._updateValFromNumber(this.telInput.val(), this.options.formatOnInit);
+        this._updateValFromNumber(this.telInput.val());
       }
       this._updatePlaceholder();
     }
