--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -22,10 +22,10 @@ var pluginName = "intlTelInput",
     initialCountry: "",
     // don't insert international dial codes
     nationalMode: true,
-    // number type to use for placeholders
-    placeholderNumberType: "MOBILE",
     // display only these countries
     onlyCountries: [],
+    // number type to use for placeholders
+    placeholderNumberType: "MOBILE",
     // the countries at the top of the list. defaults to united states and united kingdom
     preferredCountries: ["us", "gb"],
     // display the country dial code next to the selected flag so it's not part of the typed number
@@ -1076,9 +1076,9 @@ Plugin.prototype = {
 
 
 
-  /********************
-   *  PUBLIC METHODS
-   ********************/
+  /**************************
+   *  SECRET PUBLIC METHODS
+   **************************/
 
 
   // this is called when the geoip call returns
@@ -1093,6 +1093,26 @@ Plugin.prototype = {
       this.autoCountryDeferred.resolve();
     }
   },
+
+
+  // this is called when the utils request completes
+  handleUtils: function() {
+    // if the request was successful
+    if (window.intlTelInputUtils) {
+      // if there's an initial value in the input, then format it
+      if (this.telInput.val()) {
+        this._updateValFromNumber(this.telInput.val());
+      }
+      this._updatePlaceholder();
+    }
+    this.utilsScriptDeferred.resolve();
+  },
+
+
+
+  /********************
+   *  PUBLIC METHODS
+   ********************/
 
 
   // remove plugin
@@ -1190,20 +1210,6 @@ Plugin.prototype = {
     // we must update the flag first, which updates this.selectedCountryData, which is used for formatting the number before displaying it
     this._updateFlagFromNumber(number);
     this._updateValFromNumber(number);
-  },
-
-
-  // this is called when the utils request completes
-  handleUtils: function() {
-    // if the request was successful
-    if (window.intlTelInputUtils) {
-      // if there's an initial value in the input, then format it
-      if (this.telInput.val()) {
-        this._updateValFromNumber(this.telInput.val());
-      }
-      this._updatePlaceholder();
-    }
-    this.utilsScriptDeferred.resolve();
   }
 
 };
