trigger countrychange event after value has updated

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -322,16 +322,16 @@ Plugin.prototype = {
 
     // if we already have a dial code, and it's not a regionlessNanp we can go ahead and set the flag, else fall back to default
     if (this._getDialCode(val) && !this._isRegionlessNanp(val)) {
-      this._updateFlagFromNumber(val, true);
+      this._updateFlagFromNumber(val);
     } else if (this.options.initialCountry !== "auto") {
       // see if we should select a flag
       if (this.options.initialCountry) {
-        this._setFlag(this.options.initialCountry.toLowerCase(), true);
+        this._setFlag(this.options.initialCountry.toLowerCase());
       } else {
         // no dial code and no initialCountry, so default to first in list
         this.defaultCountry = (this.preferredCountries.length) ? this.preferredCountries[0].iso2 : this.countries[0].iso2;
         if (!val) {
-          this._setFlag(this.defaultCountry, true);
+          this._setFlag(this.defaultCountry);
         }
       }
 
@@ -480,14 +480,18 @@ Plugin.prototype = {
     // update flag on keyup
     // (keep this listener separate otherwise the setTimeout breaks all the tests)
     this.telInput.on("keyup" + this.ns, function() {
-      that._updateFlagFromNumber(that.telInput.val());
+      if (that._updateFlagFromNumber(that.telInput.val())) {
+        that._triggerCountryChange();
+      }
     });
 
     // update flag on cut/paste events (now supported in all major browsers)
     this.telInput.on("cut" + this.ns + " paste" + this.ns, function() {
       // hack because "paste" event is fired before input is updated
       setTimeout(function() {
-        that._updateFlagFromNumber(that.telInput.val());
+        if (that._updateFlagFromNumber(that.telInput.val())) {
+          that._triggerCountryChange();
+        }
       });
     });
   },
@@ -755,7 +759,7 @@ Plugin.prototype = {
 
   // check if need to select a new flag based on the given number
   // Note: called from _setInitialState, keyup handler, setNumber
-  _updateFlagFromNumber: function(number, isInit) {
+  _updateFlagFromNumber: function(number) {
     // if we're in nationalMode and we already have US/Canada selected, make sure the number starts with a +1 so _getDialCode will be able to extract the area code
     // update: if we dont yet have selectedCountryData, but we're here (trying to update the flag from the number), that means we're initialising the plugin with a number that already has a dial code, so fine to ignore this bit
     if (number && this.options.nationalMode && this.selectedCountryData && this.selectedCountryData.dialCode == "1" && number.charAt(0) != "+") {
@@ -795,8 +799,9 @@ Plugin.prototype = {
     }
 
     if (countryCode !== null) {
-      this._setFlag(countryCode, isInit);
+      return this._setFlag(countryCode);
     }
+    return false;
   },
 
 
@@ -835,7 +840,7 @@ Plugin.prototype = {
 
   // select the given flag, update the placeholder and the active list item
   // Note: called from _setInitialState, _updateFlagFromNumber, _selectListItem, setCountry
-  _setFlag: function(countryCode, isInit) {
+  _setFlag: function(countryCode) {
     var prevCountry = (this.selectedCountryData && this.selectedCountryData.iso2) ? this.selectedCountryData : {};
 
     // do this first as it will throw an error and stop if countryCode is invalid
@@ -871,10 +876,8 @@ Plugin.prototype = {
       this.countryListItems.find(".iti-flag." + countryCode).first().closest(".country").addClass("active");
     }
 
-    // on change flag, trigger a custom event
-    if (!isInit && prevCountry.iso2 !== countryCode) {
-      this.telInput.trigger("countrychange", this.selectedCountryData);
-    }
+    // return if the flag has changed or not
+    return (prevCountry.iso2 !== countryCode);
   },
 
 
@@ -899,7 +902,7 @@ Plugin.prototype = {
   // called when the user selects a list item from the dropdown
   _selectListItem: function(listItem) {
     // update selected flag and active list item
-    this._setFlag(listItem.attr("data-country-code"));
+    var flagChanged = this._setFlag(listItem.attr("data-country-code"));
     this._closeDropdown();
 
     this._updateDialCode(listItem.attr("data-dial-code"), true);
@@ -910,6 +913,10 @@ Plugin.prototype = {
     if (this.isGoodBrowser) {
       var len = this.telInput.val().length;
       this.telInput[0].setSelectionRange(len, len);
+    }
+
+    if (flagChanged) {
+      this._triggerCountryChange();
     }
   },
 
@@ -1075,6 +1082,12 @@ Plugin.prototype = {
   },
 
 
+  // trigger the 'countrychange' event
+  _triggerCountryChange: function() {
+    this.telInput.trigger("countrychange", this.selectedCountryData);
+  },
+
+
 
   /**************************
    *  SECRET PUBLIC METHODS
@@ -1201,6 +1214,7 @@ Plugin.prototype = {
     if (!this.selectedFlagInner.hasClass(countryCode)) {
       this._setFlag(countryCode);
       this._updateDialCode(this.selectedCountryData.dialCode, false);
+      this._triggerCountryChange();
     }
   },
 
@@ -1208,8 +1222,11 @@ Plugin.prototype = {
   // set the input value and update the flag
   setNumber: function(number) {
     // we must update the flag first, which updates this.selectedCountryData, which is used for formatting the number before displaying it
-    this._updateFlagFromNumber(number);
+    var flagChanged = this._updateFlagFromNumber(number);
     this._updateValFromNumber(number);
+    if (flagChanged) {
+      this._triggerCountryChange();
+    }
   }
 
 };
