fix issue: adding 1 to start of bangladesh number doesnt update flag

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -44,6 +44,7 @@ var pluginName = "intlTelInput",
     SPACE: 32,
     TAB: 9
   },
+  // https://en.wikipedia.org/wiki/List_of_North_American_Numbering_Plan_area_codes#Non-geographic_area_codes
   regionlessNanpNumbers = ["800", "822", "833", "844", "855", "866", "877", "880", "881", "882", "883", "884", "885", "886", "887", "888", "889"];
 
 // keep track of if the window.load event has fired as impossible to check after the fact
@@ -777,10 +778,15 @@ Plugin.prototype = {
       // check if one of the matching countries is already selected
       var countryCodes = this.countryCodes[this._getNumeric(dialCode)],
         alreadySelected = (this.selectedCountryData && countryCodes.indexOf(this.selectedCountryData.iso2) > -1),
-        // check if the given number contains an unknown area code from the North American Numbering Plan i.e. the only dialCode that could be extracted was +1 (instead of say +1204) and the actual number's length is >=4
-        isUnknownNanp = (dialCode == "+1" && numeric.length >= 4);
-      // if a matching country is not already selected (or this is an unknown NANP area code) AND it's not a regionlessNanp: choose the first in the list
-      if ((!alreadySelected || isUnknownNanp) && !this._isRegionlessNanp(numeric)) {
+        // check if the given number contains a NANP area code i.e. the only dialCode that could be extracted was +1 (instead of say +1204) and the actual number's length is >=4
+        isNanpAreaCode = (dialCode == "+1" && numeric.length >= 4),
+        nanpSelected = (this.selectedCountryData && this.selectedCountryData.dialCode == "1");
+
+      // only update the flag if:
+      // A) NOT (we currently have a NANP flag selected, and the number is a regionlessNanp)
+      // AND
+      // B) either a matching country is not already selected OR the number contains a NANP area code (ensure the flag is set to the first matching country)
+      if (!(nanpSelected && this._isRegionlessNanp(numeric)) && (!alreadySelected || isNanpAreaCode)) {
         // if using onlyCountries option, countryCodes[0] may be empty, so we must find the first non-empty index
         for (var j = 0; j < countryCodes.length; j++) {
           if (countryCodes[j]) {
