--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1056,10 +1056,11 @@ Plugin.prototype = {
   _getFullNumber: function() {
     var val = this.telInput.val(),
       dialCode = this.selectedCountryData.dialCode,
-      prefix;
+      prefix,
+      normalizedVal = (val.substr(0, 2) == "+1") ? val.substr(2) : val;
     if (this.options.separateDialCode) {
       prefix = "+" + dialCode;
-    } else if (dialCode && dialCode.charAt(0) == "1" && dialCode.length == 4 && dialCode.substr(1) != val.substr(0, 3)) {
+    } else if (dialCode && dialCode.charAt(0) == "1" && dialCode.length == 4 && dialCode.substr(1) != normalizedVal.substr(0, 3)) {
       // if we're dealing with a NANP country, ensure the number includes the area code
       prefix = dialCode.substr(1);
     } else {
