Add return phone object

--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1238,6 +1238,19 @@ Plugin.prototype = {
     if (flagChanged) {
       this._triggerCountryChange();
     }
+  },
+
+  // get the phone object with code and number
+  getPhoneObject: function() {
+      // check if the country data and number is valid
+      if (this.selectedCountryData && this.getNumber()) {
+          return {
+              'code': this.selectedCountryData.dialCode, //add the country dial code
+              'number': this.getNumber().split(this.selectedCountryData.dialCode)[1] //get the number without the country dial code
+          };
+      } else {
+          return {}; //return empty object
+      }
   }
 
 };
