--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -1,17 +1,6 @@
-/**
- * Variables declared here can be overridden by consuming applications, with
- * the help of the `!default` flag.
- *
- * @example
- *     // overriding $hoverColor
- *     $hoverColor: rgba(red, 0.05);
- *
- *     // overriding image path
- *     $flagsImagePath: "images/";
- *
- *     // import the scss file after the overrides
- *     @import "bower_component/intl-tel-input/src/css/intlTelInput";
- */
+// NOTE: by using !default on all variables, we're saying only declare the variable if it doesn't
+// already exist, which allows devs to declare these variables themselves and assign them any value
+// they want before importing this file
 
 // rgba is needed for the selected flag hover state to blend in with
 // the border-highlighting some browsers give the input on focus
@@ -44,7 +33,7 @@ $flagsImageName: "flags" !default;
 $flagsImageExtension: "png" !default;
 
 // enough space for them to click off to close
-$mobilePopupMargin: 30px;
+$mobilePopupMargin: 30px !default;
 
 .intl-tel-input {
   // need position on the container so the selected flag can be
