Add cache busting to examples JS files

--- a/examples/js/defaultCountryIp.js.ejs
+++ b/examples/js/defaultCountryIp.js.ejs
@@ -6,5 +6,5 @@ $("#phone").intlTelInput({
       callback(countryCode);
     });
   },
-  utilsScript: "../../build/js/utils.js" // just for formatting/placeholders etc
+  utilsScript: "../../build/js/utils.js?<%= time %>" // just for formatting/placeholders etc
 });
