--- a/examples/js/isValidNumber.js.ejs
+++ b/examples/js/isValidNumber.js.ejs
@@ -4,7 +4,7 @@ var telInput = $("#phone"),
 
 // initialise plugin
 telInput.intlTelInput({
-  utilsScript: "../../build/js/utils.js"
+  utilsScript: "../../build/js/utils.js?<%= time %>"
 });
 
 var reset = function() {
