--- a/examples/template.html.ejs
+++ b/examples/template.html.ejs
@@ -41,6 +41,6 @@
     <script src="../js/prism.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../../build/js/intlTelInput.js?<%= time %>"></script>
-    <script src="../js/<%= script %>?<%= time %>"></script>
+    <script src="./js/<%= script %>?<%= time %>"></script>
   </body>
 </html>
