--- a/src/js/wrapper.js.ejs
+++ b/src/js/wrapper.js.ejs
@@ -1,22 +1,28 @@
 // wrap in UMD - see https://github.com/umdjs/umd/blob/master/jqueryPluginCommonjs.js
 (function (factory) {
   if (typeof define === "function" && define.amd) {
-    define(["jquery"], function($) {
-      factory($, window, document);
-    });
+    define([], factory(window, document));
   } else if (typeof module === "object" && module.exports) {
-    module.exports = factory(require("jquery"), window, document);
+    module.exports = factory(window, document);
   } else {
-    factory(jQuery, window, document);
+    window.intlTelInput = factory(window, document);
   }
-}(function ($, window, document, undefined) {
+}(function (window, document, undefined) {
   "use strict";
 
-  <%= plugin %>
+  return (function() {
+    <%= data %>
+    <%= plugin %>
 
-  // version
-  $.fn[pluginName].version = "<%= version %>";
+    // version
+    window.intlTelInputGlobals.version = "<%= version %>";
 
-  <%= data %>
-
+    // convenience wrapper
+    return function(input, options) {
+      var iti = new Iti(input, options);
+      iti._init();
+      window.intlTelInputGlobals.instances[iti.id] = iti;
+      return iti;
+    };
+  })();
 }));
